# ndff

./: .gitignore  README.md  main.cpp  meson.build  ndff.c  ndff.cpp
include/: ndff.hpp
